--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PRO_SPECIAL_PASSWORD=mySuperSecret123
 SESSION_SECRET=secretkey
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/bhi
+    EMAIL_USER=harish2puhaniya@gmail.com
+EMAIL_PASS=uvzxlytyobfjxnjl
